--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,7 @@ Changelog = "https://github.com/kebasyaty/xloft/blob/v0/CHANGELOG.md"
 
 [tool.uv]
 package = true
-default-groups = ["dev", "test"]
+default-groups = ["dev", "test", "docs"]
 compile-bytecode = true
 check-url = "https://pypi.org/simple"
 
@@ -47,6 +47,11 @@ build-backend = "hatchling.build"
 
 [dependency-groups]
 dev = ["mypy>=1.17.1", "ruff>=0.12.7"]
+docs = [
+    "mkdocs>=1.6.1",
+    "mkdocs-material>=9.6.16",
+    "mkdocstrings[python]>=0.30.0",
+]
 test = [
     "pytest>=8.4.1",
     "pytest-asyncio>=1.1.0",
