--- a/pyproject.toml
+++ b/pyproject.toml
@@ -100,6 +100,8 @@ disable_error_code = [
     "no-untyped-call",
     "func-returns-value",
     "union-attr",
+    "import-not-found",
+    "misc",
 ]
 
 [tool.pytest.ini_options]
