--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,6 +23,7 @@ theme:
     - navigation.path
     - navigation.indexes
     - navigation.top
+    - navigation.footer
     - toc.follow
   palette:
     # Palette toggle for automatic mode
@@ -47,7 +48,13 @@ theme:
 
 plugins:
   - search
-  - tags
+  - git-authors
+  - mkdocs-breadcrumbs-plugin
+  # https://squidfunk.github.io/mkdocs-material/setup/setting-up-tags/
+  - tags:
+      tags_slugify: !!python/object/apply:pymdownx.slugs.slugify
+        kwds:
+          case: lower
   - mkdocstrings:
       handlers:
         python:
@@ -58,10 +65,23 @@ plugins:
 markdown_extensions:
   - markdown.extensions.toc:
       permalink: true
-      slugify:
-        !!python/object/apply:pymdownx.slugs.slugify { kwds: { case: lower } }
+      slugify: !!python/object/apply:pymdownx.slugs.slugify
+        kwds:
+          case: lower
+
+extra:
+  social:
+    - icon: fontawesome/brands/github
+      link: https://github.com/kebasyaty
+    - icon: fontawesome/brands/linkedin
+      link: https://www.linkedin.com/in/gennady-kostyunin-10188a1a2/
+    - icon: fontawesome/brands/x-twitter
+      link: https://twitter.com/kebasyaty
+
+copyright: Copyright &copy; 2025 Gennady Kostyunin
 
 nav:
   - XLOFT: index.md
+  - Installation: installation.md
   - NamedTuple: namedtuple.md
   - Errors: errors.md
