--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -72,9 +72,9 @@ extra:
     - icon: fontawesome/brands/github
       link: https://github.com/kebasyaty
     - icon: fontawesome/brands/linkedin
-      link: https://www.linkedin.com/in/gennady-kostyunin-10188a1a2/
+      link: https://www.linkedin.com
     - icon: fontawesome/brands/x-twitter
-      link: https://twitter.com/kebasyaty
+      link: https://twitter.com
 
 copyright: Copyright &copy; 2025 Gennady Kostyunin
 
