--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -76,7 +76,7 @@ extra:
     - icon: fontawesome/brands/x-twitter
       link: https://twitter.com
 
-copyright: Copyright &copy; 2025 Gennady Kostyunin
+copyright: Copyright &copy; 2025 kebasyaty
 
 nav:
   - XLOFT: index.md
