--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -80,7 +80,7 @@ extra:
     - icon: fontawesome/brands/x-twitter
       link: https://twitter.com
 
-copyright: "Copyright &copy; 2025-<script>document.write(new Date().getFullYear())</script> kebasyaty"
+copyright: Copyright &copy; 2025 kebasyaty
 
 nav:
   - XLOFT: index.md
