--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,25 +28,11 @@ theme:
     #- navigation.tabs
     #- navigation.tabs.sticky
   palette:
-    # Palette toggle for automatic mode
-    - media: "(prefers-color-scheme)"
-      toggle:
-        icon: material/brightness-auto
-        name: Switch to light mode
-    # Palette toggle for light mode
-    - media: "(prefers-color-scheme: light)"
-      scheme: default
-      primary: blue
-      toggle:
-        icon: material/brightness-7
-        name: Switch to dark mode
-    # Palette toggle for dark mode
-    - media: "(prefers-color-scheme: dark)"
-      scheme: slate
-      primary: indigo
-      toggle:
-        icon: material/brightness-4
-        name: Switch to system preference
+    scheme: slate
+    primary: indigo
+
+extra_css:
+  - github_style/css/extra.css
 
 plugins:
   - search
