--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,6 +64,7 @@ docs = [
 [tool.ruff]
 fix = true
 line-length = 100
+indent-width = 4
 required-version = ">=0.7.11"
 src = ["src", "tests"]
 include = [
@@ -83,8 +84,10 @@ ignore = ["D417", "D206"]
 convention = "google"
 
 [tool.ruff.format]
+quote-style = "double"
+indent-style = "space"
 docstring-code-format = true
-docstring-code-line-length = 80
+docstring-code-line-length = 100
 
 [tool.mypy]
 strict = true
