--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,7 +71,7 @@ include = ["*.py", "*.pyi", "*.ipynb", "**/pyproject.toml", "src/**/*.py"]
 exclude = ["tests/**/*.py"]
 
 [tool.ruff.lint]
-preview = false
+preview = true
 select = [
     "D",    # pydocstyle
     "I",    # isort
@@ -90,7 +90,17 @@ select = [
     "ERA",  # eradicate
     "FURB", # refurb
 ]
-ignore = ["D417", "D206", "C408", "RUF001", "RUF002", "RUF003", "S110"]
+ignore = [
+    "D417",
+    "D206",
+    "C408",
+    "RUF001",
+    "RUF002",
+    "RUF003",
+    "RUF022",
+    "E722",
+    "S110",
+]
 fixable = ["I"]
 
 [tool.ruff.lint.flake8-bandit]
