--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -50,7 +50,7 @@ jobs:
 
       - name: Run check
         run: |
-          uv run ruff check --config pyproject.toml
+          uv run ruff check --output-format=github --config pyproject.toml
           uv run mypy --config-file pyproject.toml
 
       - name: Run tests
