--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,7 +68,35 @@ indent-width = 4
 required-version = ">=0.7.11"
 src = ["src"]
 include = ["*.py", "*.pyi", "*.ipynb", "**/pyproject.toml", "src/**/*.py"]
-exclude = ["tests/**/*.py"]
+exclude = [
+    ".bzr",
+    ".direnv",
+    ".eggs",
+    ".git",
+    ".git-rewrite",
+    ".hg",
+    ".ipynb_checkpoints",
+    ".mypy_cache",
+    ".nox",
+    ".pants.d",
+    ".pyenv",
+    ".pytest_cache",
+    ".pytype",
+    ".ruff_cache",
+    ".svn",
+    ".tox",
+    ".venv",
+    ".vscode",
+    "__pypackages__",
+    "_build",
+    "buck-out",
+    "build",
+    "dist",
+    "node_modules",
+    "site-packages",
+    "venv",
+    "tests/**/*.py",
+]
 
 [tool.ruff.lint]
 preview = true
@@ -102,6 +130,7 @@ ignore = [
     "S110",
 ]
 fixable = ["I"]
+dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
 
 [tool.ruff.lint.flake8-bandit]
 check-typed-exception = true
@@ -114,6 +143,8 @@ quote-style = "double"
 indent-style = "space"
 docstring-code-format = true
 docstring-code-line-length = 100
+skip-magic-trailing-comma = false
+line-ending = "auto"
 
 [tool.mypy]
 strict = true
