--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,7 +67,7 @@ line-length = 120
 indent-width = 4
 required-version = ">=0.7.11"
 src = ["src"]
-include = ["*.py", "*.pyi", "*.ipynb", "**/pyproject.toml", "src/**/*.py"]
+include = ["src/**/*.py"]
 exclude = [
     ".bzr",
     ".direnv",
