--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,7 +66,7 @@ fix = true
 line-length = 120
 indent-width = 4
 required-version = ">=0.7.11"
-src = ["src"]
+src = ["src", "tests"]
 include = ["src/**/*.py"]
 exclude = [
     ".bzr",
