--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
     {
       "label": "Ruff: Run Check",
       "type": "shell",
-      "command": ["uv run ruff check --fix --config pyproject.toml"],
+      "command": ["uv run ruff check --fix --show-fixes --config pyproject.toml"],
       "problemMatcher": []
     },
     {
