--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,18 +2,6 @@
   "version": "2.0.0",
   "tasks": [
     {
-      "label": "Ruff: Run Check",
-      "type": "shell",
-      "command": ["uv run ruff check --fix --show-fixes --config pyproject.toml"],
-      "problemMatcher": []
-    },
-    {
-      "label": "MyPy: Run Check",
-      "type": "shell",
-      "command": ["uv run mypy --config-file pyproject.toml"],
-      "problemMatcher": []
-    },
-    {
       "label": "UV: Run Upgrade",
       "type": "shell",
       "command": ["uv sync --upgrade"],
@@ -23,6 +11,38 @@
       "label": "UV: Run Lock",
       "type": "shell",
       "command": ["uv lock"],
+      "problemMatcher": []
+    },
+    {
+      "label": "Ruff: Run Check",
+      "type": "shell",
+      "command": [
+        "uv run ruff check --fix --show-fixes --config pyproject.toml"
+      ],
+      "problemMatcher": []
+    },
+    {
+      "label": "MyPy: Run Check",
+      "type": "shell",
+      "command": ["uv run mypy --config-file pyproject.toml"],
+      "problemMatcher": []
+    },
+    {
+      "label": "Pre-Commit: Run Install",
+      "type": "shell",
+      "command": ["uv run pre-commit install"],
+      "problemMatcher": []
+    },
+    {
+      "label": "Pre-Commit: Run Autoupdate",
+      "type": "shell",
+      "command": ["uv run pre-commit autoupdate"],
+      "problemMatcher": []
+    },
+    {
+      "label": "Pre-Commit: Run Check",
+      "type": "shell",
+      "command": ["uv run pre-commit run --all-files"],
       "problemMatcher": []
     },
     {
