--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -42,7 +42,7 @@ repos:
     hooks:
       - id: ruff-check
         types_or: [python, pyi]
-        args: [--config=pyproject.toml]
+        args: [--fix, --show-fixes, --config=pyproject.toml]
       - id: ruff-format
         types_or: [python, pyi]
 
@@ -50,7 +50,14 @@ repos:
     rev: v1.17.1
     hooks:
       - id: mypy
-        args: [--ignore-missing-imports, --config-file=pyproject.toml]
+        args:
+          [
+            --ignore-missing-imports,
+            --install-types,
+            --non-interactive,
+            --config-file=pyproject.toml,
+          ]
+        exclude: examples
 
   - repo: https://github.com/pre-commit/pygrep-hooks
     rev: v1.10.0
