--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -43,7 +43,7 @@
       "label": "Pre-Commit: Run Check",
       "type": "shell",
       "command": [
-        "uv run pre-commit run --all-files;",
+        "uv run pre-commit run --show-diff-on-failure --color=always --all-files;",
         "uv run pytest -v tests/"
       ],
       "problemMatcher": []
