--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,7 +47,12 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [dependency-groups]
-dev = ["mypy>=1.17.1", "pre-commit>=4.3.0", "ruff>=0.12.7"]
+dev = [
+    "detect-secrets>=1.5.0",
+    "mypy>=1.17.1",
+    "pre-commit>=4.3.0",
+    "ruff>=0.12.7",
+]
 test = [
     "pytest>=8.4.1",
     "pytest-asyncio>=1.1.0",
