--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,11 +27,11 @@ repos:
         args: [--pytest-test-first]
       - id: debug-statements
       - id: end-of-file-fixer
-        exclude_types: [json]
+        exclude: \.(json|svg|pot|po)$
       - id: mixed-line-ending
       - id: trailing-whitespace
         args: [--markdown-linebreak-ext=md]
-        exclude_types: [json]
+        exclude: \.(json|svg)$
       - id: fix-byte-order-marker
 
   - repo: https://github.com/pre-commit/pygrep-hooks
