--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,7 +20,6 @@ repos:
       - id: check-toml
       - id: check-xml
       - id: check-yaml
-        args: [--allow-multiple-documents]
         exclude: mkdocs.yml
       - id: forbid-new-submodules
       - id: name-tests-test
@@ -30,7 +29,7 @@ repos:
         exclude: \.(json|svg|pot|po)$
       - id: mixed-line-ending
       - id: trailing-whitespace
-        args: [--markdown-linebreak-ext=md]
+        args: ["--markdown-linebreak-ext=md,mdown,markdown"]
         exclude: \.(json|svg)$
       - id: fix-byte-order-marker
 
