--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -33,6 +33,19 @@ repos:
         exclude: \.(json|svg)$
       - id: fix-byte-order-marker
 
+  - repo: https://github.com/igorshubovych/markdownlint-cli
+    rev: v0.45.0
+    hooks:
+      - id: markdownlint
+        args:
+          [
+            "--disable=MD001",
+            "--disable=MD013",
+            "--disable=MD029",
+            "--disable=MD033",
+            "--disable=MD041",
+          ]
+
   - repo: https://github.com/pre-commit/pygrep-hooks
     rev: v1.10.0
     hooks:
