--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,9 +1,8 @@
 default_language_version:
   python: python3.13
 
-exclude: "^$"
-
-fail_fast: false
+# For `uv run pre-commit run --all-files`
+exclude: "^(dist|site|.venv|.pytest_cache|.ruff_cache|.mypy_cache)$"
 
 minimum_pre_commit_version: "4.3.0"
 
