--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,7 +46,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Install dependencies of project
-        run: uv sync --locked --dev --group test
+        run: uv sync --locked --dev --group lint tests
 
       - name: Run check
         run: |
