--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,24 +2,9 @@ name: Test
 
 on:
   push:
-    paths-ignore:
-      - ".vscode/**"
-      - "assets/**"
-      - "examples/**"
-  pull_request:
     branches: [main]
-    paths-ignore:
-      - ".vscode/**"
-      - "assets/**"
-      - "examples/**"
+  pull_request:
   workflow_dispatch:
-
-permissions:
-  contents: read
-
-concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
 
 jobs:
   build:
@@ -33,33 +18,30 @@ jobs:
     name: ${{ matrix.os }} Python ${{ matrix.python-version }}
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v5
         with:
           persist-credentials: false
 
-      - name: Install UV and set the Python version
-        uses: astral-sh/setup-uv@v5
+      - uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - uses: astral-sh/setup-uv@v6
         with:
           version: ${{ matrix.uv-version }}
-          python-version: ${{ matrix.python-version }}
 
       - name: Install dependencies of project
         run: uv sync --locked --no-group docs
 
-      - name: Run check
-        run: |
-          uv run ruff check --output-format=github --config pyproject.toml
-          uv run mypy --config-file pyproject.toml
+      - name: Run checking of code
+        run: uv run pre-commit run --show-diff-on-failure --color=always --all-files
 
       - name: Run tests
         run: uv run pytest -v tests/
 
   success:
-    permissions:
-      contents: none
     needs: build
     runs-on: ubuntu-latest
-    name: Test Successful
     steps:
       - name: Success
         run: echo Test Successful
