--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "xloft"
-version = "0.1.17"
+version = "0.1.18"
 description = "(XLOFT) X-Library of tools"
 readme = "README.md"
 authors = [{ name = "kebasyaty", email = "kebasyaty@gmail.com" }]
@@ -48,11 +48,7 @@ build-backend = "hatchling.build"
 
 [dependency-groups]
 dev = []
-lint = [
-    "mypy>=1.17.1",
-    "pre-commit>=4.3.0",
-    "ruff>=0.12.7",
-]
+lint = ["mypy>=1.17.1", "pre-commit>=4.3.0", "ruff>=0.12.7"]
 test = [
     "pytest>=8.4.1",
     "pytest-asyncio>=1.1.0",
