fix a to_human_size method

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "xloft"
-version = "0.1.19"
+version = "0.1.20"
 description = "(XLOFT) X-Library of tools"
 readme = "README.md"
 authors = [{ name = "kebasyaty", email = "kebasyaty@gmail.com" }]
@@ -69,7 +69,7 @@ line-length = 120
 indent-width = 4
 required-version = ">=0.7.11"
 src = ["src", "tests"]
-include = ["src/**/*.py"]
+include = ["src/**/*.py", "tests/**/*.py"]
 exclude = [
     ".bzr",
     ".direnv",
@@ -101,7 +101,6 @@ exclude = [
     "assets",
     "docs",
     "site",
-    "tests",
 ]
 
 [tool.ruff.lint]
@@ -134,6 +133,8 @@ ignore = [
     "RUF022",
     "E722",
     "S110",
+    "S101",
+    "T201",
 ]
 fixable = ["I"]
 dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
