--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -67,4 +67,5 @@ nav:
   - Installation: md_pages/installation.md
   - NamedTuple: md_pages/namedtuple.md
   - Humanism: md_pages/humanism.md
+  - Quantum: md_pages/quantum.md
   - Errors: md_pages/errors.md
