--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,19 @@ classifiers = [
 ]
 dependencies = []
 
+[project.optional-dependencies]
+namedtuple = ["namedtuple"]
+humanism = ["humanism"]
+quantum = ["quantum"]
+
+[tool.uv.sources]
+namedtuple = { workspace = true }
+humanism = { workspace = true }
+quantum = { workspace = true }
+
+[tool.uv.workspace]
+members = ["packages/*"]
+
 [project.urls]
 Homepage = "https://github.com/kebasyaty/xloft"
 Repository = "https://github.com/kebasyaty/xloft"
@@ -68,8 +81,8 @@ fix = true
 line-length = 120
 indent-width = 4
 required-version = ">=0.7.11"
-src = ["src", "tests"]
-include = ["src/**/*.py", "tests/**/*.py"]
+src = ["src", "tests", "packages"]
+include = ["src/**/*.py", "tests/**/*.py", "packages/**/*.py"]
 exclude = [
     ".bzr",
     ".direnv",
@@ -180,7 +193,7 @@ line-ending = "auto"
 strict = true
 show_error_codes = true
 pretty = true
-files = ["src/**/*.py", "tests/**/*.py"]
+files = ["src/**/*.py", "tests/**/*.py", "packages/**/*.py"]
 disable_error_code = [
     "type-arg",
     "no-any-return",
@@ -198,6 +211,7 @@ disable_error_code = [
     "func-returns-value",
     "union-attr",
     "import-not-found",
+    "import-untyped",
     "misc",
 ]
 
