--- a/packages/quantum/pyproject.toml
+++ b/packages/quantum/pyproject.toml
@@ -3,9 +3,7 @@ name = "quantum"
 version = "0.1.0"
 description = "A set of tools for quantum calculations."
 readme = "README.md"
-authors = [
-    { name = "kebasyaty", email = "kebasyaty@gmail.com" }
-]
+authors = [{ name = "kebasyaty", email = "kebasyaty@gmail.com" }]
 requires-python = ">=3.12,<4.0"
 dependencies = []
 
