--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -24,7 +24,9 @@
     {
       "label": "MyPy: Run Check",
       "type": "shell",
-      "command": ["uv run mypy --ignore-missing-imports --config-file pyproject.toml"],
+      "command": [
+        "uv run mypy --ignore-missing-imports --config-file pyproject.toml"
+      ],
       "problemMatcher": []
     },
     {
@@ -56,7 +58,11 @@
     {
       "label": "PyTest: Run Tests",
       "type": "shell",
-      "command": ["uv run pytest -v tests/"],
+      "command": [
+        "uv run pytest -v packages/humanism/tests/;",
+        "uv run pytest -v packages/namedtuple/tests/;",
+        "uv run pytest -v packages/quantum/tests/;"
+      ],
       "problemMatcher": []
     },
     {
