--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -59,9 +59,8 @@
       "label": "PyTest: Run Tests",
       "type": "shell",
       "command": [
-        "uv run pytest -v packages/humanism/tests_humanism/;",
-        "uv run pytest -v packages/namedtuple/tests_namedtuple/;",
-        "uv run pytest -v packages/quantum/tests_quantum/;"
+        "uv run pytest -v tests/;",
+        "uv run pytest -v packages/quantum/tests_quantum/"
       ],
       "problemMatcher": []
     },
