--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,13 +27,9 @@ classifiers = [
 dependencies = []
 
 [project.optional-dependencies]
-namedtuple = ["namedtuple"]
-humanism = ["humanism"]
 quantum = ["quantum"]
 
 [tool.uv.sources]
-namedtuple = { workspace = true, extra = "namedtuple" }
-humanism = { workspace = true, extra = "humanism" }
 quantum = { workspace = true, extra = "quantum" }
 
 [tool.uv.workspace]
@@ -81,16 +77,7 @@ fix = true
 line-length = 120
 indent-width = 4
 required-version = ">=0.7.11"
-src = [
-    "src",
-    "tests",
-    "packages/humanism/src",
-    "packages/namedtuple/src",
-    "packages/quantum/src",
-    "packages/humanism/tests_humanism",
-    "packages/namedtuple/tests_namedtuple",
-    "packages/quantum/tests_quantum",
-]
+src = ["src", "tests", "packages/quantum/src", "packages/quantum/tests_quantum"]
 include = ["src/**/*.py", "packages/**/*.py"]
 exclude = [
     ".bzr",
@@ -202,13 +189,7 @@ line-ending = "auto"
 strict = true
 show_error_codes = true
 pretty = true
-files = [
-    "src/**/*.py",
-    "tests/**/*.py",
-    "packages/humanism/src/**/*.py",
-    "packages/namedtuple/src/**/*.py",
-    "packages/quantum/src/**/*.py",
-]
+files = ["src/**/*.py", "tests/**/*.py", "packages/quantum/src/**/*.py"]
 disable_error_code = [
     "type-arg",
     "no-any-return",
@@ -218,12 +199,7 @@ disable_error_code = [
 ]
 
 [[tool.mypy.overrides]]
-module = [
-    "tests.*",
-    "packages/humanism/tests_humanism.*",
-    "packages/namedtuple/tests_namedtuple.*",
-    "packages/quantum/tests_quantum.*",
-]
+module = ["tests.*", "packages/quantum/tests_quantum.*"]
 disable_error_code = [
     "arg-type",
     "no-untyped-def",
@@ -237,9 +213,4 @@ disable_error_code = [
 ]
 
 [tool.pytest.ini_options]
-testpaths = [
-    "tests",
-    "packages/humanism/tests_humanism",
-    "packages/namedtuple/tests_namedtuple",
-    "packages/quantum/tests_quantum",
-]
+testpaths = ["tests", "packages/quantum/tests_quantum"]
