fix by pre-commit

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -83,6 +83,7 @@ repos:
             --ignore-missing-imports,
             --install-types,
             --non-interactive,
+            --explicit-package-bases,
             --config-file=pyproject.toml,
           ]
         exclude: examples
