--- a/packages/quantum/pyproject.toml
+++ b/packages/quantum/pyproject.toml
@@ -10,3 +10,10 @@ dependencies = []
 [build-system]
 requires = ["uv_build>=0.8.11,<0.9.0"]
 build-backend = "uv_build"
+
+[tool.uv]
+package = true
+compile-bytecode = true
+
+[tool.uv.build-backend]
+module-root = "src"
