--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,4 +38,4 @@ jobs:
       - name: Run tests
         run: |
           uv run pytest -v tests/
-          uv run pytest -v packages/quantum/tests_quantum/
+          uv run pytest -v packages/quantum/tests/
