--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "xloft"
-version = "0.4.2"
+version = "0.4.4"
 description = "(XLOFT) X-Library of tools"
 readme = "README.md"
 authors = [{ name = "kebasyaty", email = "kebasyaty@gmail.com" }]
@@ -33,9 +33,6 @@ Source = "https://github.com/kebasyaty/xloft"
 "Bug Tracker" = "https://github.com/kebasyaty/xloft/issues"
 Changelog = "https://github.com/kebasyaty/xloft/blob/v0/CHANGELOG.md"
 
-[project.optional-dependencies]
-quantum = ["quantum"]
-
 [tool.uv]
 package = true
 default-groups = ["dev", "lint", "test", "docs", "types"]
@@ -44,9 +41,6 @@ check-url = "https://pypi.org/simple"
 
 [tool.uv.build-backend]
 module-root = "src"
-
-[tool.uv.sources]
-quantum = { git = "https://github.com/kebasyaty/xloft", subdirectory = "packages/quantum", branch = "main" }
 
 [build-system]
 requires = ["hatchling"]
@@ -74,8 +68,8 @@ fix = true
 line-length = 120
 indent-width = 4
 required-version = ">=0.7.11"
-src = ["src", "tests", "packages/quantum/src", "packages/quantum/tests"]
-include = ["src/**/*.py", "packages/**/*.py"]
+src = ["src", "tests"]
+include = ["src/**/*.py", "tests/**/*.py"]
 exclude = [
     ".bzr",
     ".direnv",
@@ -186,12 +180,7 @@ line-ending = "auto"
 strict = true
 show_error_codes = true
 pretty = true
-files = [
-    "src/**/*.py",
-    "tests/**/*.py",
-    "packages/quantum/src/**/*.py",
-    "packages/quantum/tests/**/*.py",
-]
+files = ["src/**/*.py", "tests/**/*.py"]
 disable_error_code = [
     "type-arg",
     "no-any-return",
@@ -201,7 +190,7 @@ disable_error_code = [
 ]
 
 [[tool.mypy.overrides]]
-module = ["tests.*", "packages/quantum/tests.*"]
+module = ["tests.*"]
 disable_error_code = [
     "arg-type",
     "no-untyped-def",
@@ -215,4 +204,4 @@ disable_error_code = [
 ]
 
 [tool.pytest.ini_options]
-testpaths = ["tests", "packages/quantum/tests"]
+testpaths = ["tests"]
