--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,15 +2,21 @@
   "version": "2.0.0",
   "tasks": [
     {
-      "label": "UV: Run Upgrade",
-      "type": "shell",
-      "command": ["uv sync --upgrade"],
-      "problemMatcher": []
-    },
-    {
       "label": "UV: Run Lock",
       "type": "shell",
       "command": ["uv lock"],
+      "problemMatcher": []
+    },
+    {
+      "label": "UV: Run Deploy",
+      "type": "shell",
+      "command": ["uv build --wheel;", "uv publish"],
+      "problemMatcher": []
+    },
+    {
+      "label": "UV: Run Upgrade",
+      "type": "shell",
+      "command": ["uv sync --upgrade"],
       "problemMatcher": []
     },
     {
@@ -80,7 +86,7 @@
       "problemMatcher": []
     },
     {
-      "label": "MkDocs: Run Deploy Vx.x",
+      "label": "MkDocs: Run Deploy 0.4",
       "type": "shell",
       "command": [
         "uv run mike deploy --push --update-aliases 0.4 latest;",
