--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
 site_name: XLOFT Docs
 site_description: "(XLOFT) X-Library of tools."
 site_url: https://kebasyaty.github.io/xloft/
-site_author: Gennady Kostyunin
+site_author: Kebasyaty
 copyright: Copyright &copy; 2025 Maintained by <a href="https://github.com/kebasyaty">Kebasyaty</a>
 repo_name: kebasyaty/xloft
 repo_url: https://github.com/kebasyaty/xloft
