--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,6 +19,7 @@ theme:
     - search.suggest
     - search.highlight
     - search.share
+    - content.code.copy
     - navigation.tracking
     - navigation.sections
     - navigation.expand
@@ -53,6 +54,13 @@ markdown_extensions:
       slugify: !!python/object/apply:pymdownx.slugs.slugify
         kwds:
           case: lower
+  - pymdownx.highlight:
+      anchor_linenums: true
+      line_spans: __span
+      pygments_lang_class: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - pymdownx.superfences
 
 extra:
   version:
@@ -70,6 +78,7 @@ extra:
 nav:
   - XLOFT: index.md
   - Installation: pages/installation.md
+  - Usage: pages/usage.md
   - NamedTuple: pages/namedtuple.md
   - Human: pages/human.md
   - Errors: pages/errors.md
