--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,6 +61,7 @@ docs = [
     "mkdocs>=1.6.1",
     "mkdocs-material>=9.6.16",
     "mkdocstrings[python]>=0.30.0",
+    "pygments>=2.19.2",
     "pymdown-extensions>=10.16.1",
 ]
 types = []
