--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -89,8 +89,7 @@ repos:
         exclude: examples
 
   - repo: https://github.com/python-jsonschema/check-jsonschema
-    rev: 0.33.2
+    rev: 0.35.0
     hooks:
       - id: check-github-workflows
-        args: [--verbose]
-      - id: check-dependabot
+        args: ["--verbose"]
