replace mypy to pyrefly

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,7 +50,11 @@ build-backend = "hatchling.build"
 
 [dependency-groups]
 dev = []
-lint = ["mypy>=1.17.1", "pre-commit>=4.3.0", "ruff>=0.12.7"]
+lint = [
+ "pre-commit>=4.3.0",
+ "pyrefly>=0.46.0",
+ "ruff>=0.12.7",
+]
 test = [
     "pytest>=8.4.1",
     "pytest-asyncio>=1.1.0",
@@ -179,33 +183,20 @@ docstring-code-line-length = 120
 skip-magic-trailing-comma = false
 line-ending = "auto"
 
-[tool.mypy]
-strict = true
-show_error_codes = true
-pretty = true
-files = ["src/**/*.py", "tests/**/*.py"]
-disable_error_code = [
-    "type-arg",
-    "no-any-return",
-    "untyped-decorator",
-    "attr-defined",
-    "index",
-    "operator",
-]
+[tool.pyrefly]
+project-includes = ["src", "tests"]
+search-path = ["src", "tests"]
+ignore-errors-in-generated-code = true
+untyped_def_behavior = "check-and-infer-return-any"
 
-[[tool.mypy.overrides]]
-module = ["tests.*"]
-disable_error_code = [
-    "arg-type",
-    "no-untyped-def",
-    "no-untyped-call",
-    "func-returns-value",
-    "union-attr",
-    "import-not-found",
-    "import-untyped",
-    "no-untyped-def",
-    "misc",
-]
+[tool.pyrefly.errors]
+missing-attribute = false
+
+[[tool.pyrefly.sub-config]]
+matches = "tests/**"
+
+[tool.pyrefly.sub-config.errors]
+
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
