--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -71,19 +71,13 @@ repos:
       - id: ruff-format
         types_or: [python, pyi]
 
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.19.1
+  - repo: https://github.com/facebook/pyrefly-pre-commit
+    rev: 0.46.0
     hooks:
-      - id: mypy
-        args:
-          [
-            --ignore-missing-imports,
-            --install-types,
-            --non-interactive,
-            --explicit-package-bases,
-            --config-file=pyproject.toml,
-          ]
-        exclude: examples
+      - id: pyrefly-check
+        name: Pyrefly (type checking)
+        pass_filenames: false
+        language: system
 
   - repo: https://github.com/python-jsonschema/check-jsonschema
     rev: 0.35.0
